# OpenPEGASUS

./: .gitignore  CMakeLists.txt  flake.nix
examples/: CMakeLists.txt
pegasus/: CMakeLists.txt  timer.h
